Added memory vm arguments