@@ -25,7 +25,9 @@
           <aut>
             <explicit>${autPath}</explicit>
 			<vmArgs> 
-				<vmArg>-javaagent:/usr/jacoco/lib/jacocoagent.jar=destfile=/usr/test/jacoco.exec</vmArg>  
+				<vmArg>-javaagent:/usr/jacoco/lib/jacocoagent.jar=destfile=/usr/test/jacoco.exec</vmArg>
+				<vmArg>-Xmx1024m</vmArg>
+				<vmArg>-XX:MaxPermSize=512m</vmArg>				
 			</vmArgs>
           </aut>
           <runner>
